--- a/styles.css
+++ b/styles.css
@@ -182,3 +182,8 @@ p a:link {
         justify-content: center;
     }
 }
+@media only screen and (min-width: 619px){
+    .parts{
+        justify-contents : center;   
+    }
+}
