--- a/styles.css
+++ b/styles.css
@@ -14,9 +14,10 @@ html, body {
 }
 .intro-img {
     width:100%;
-    height: 600px;
+    display: block;
     padding:0;
-    margin:0;
+    margin-left:auto;
+    margin-right:auto;
 }
 .nav-bar , .abt-flex , .work-part{
     display: flex;
