--- a/styles.css
+++ b/styles.css
@@ -186,13 +186,14 @@ p a:link {
     }
     #top {
         justify-content: center;
+        height: 40%;
         background-image: url('img/cover_photo_phone.jpg');
     }
     .parts a{
-        font-size: 20px;
+        font-size: 17px;
     }
     #main_name {
-        font-size: 40px;
+        font-size: 30px;
     }
 }
 @media only screen and (max-width: 1164px){
