--- a/assets/about-css.css
+++ b/assets/about-css.css
@@ -2,11 +2,13 @@ html {
 	background-color: #161618;
 }
 body {
+	font-family: 'Lora', serif;
+	line-height: 1.3;
+}
+.content{
 	width: 70vw;
 	margin-left: auto;
 	margin-right: auto;
-	font-family: 'Lora', serif;
-	line-height: 1.3;
 }
 .main {
 	color:white;
