--- a/assets/projects-css.css
+++ b/assets/projects-css.css
@@ -2,12 +2,14 @@ html {
 	background-color: #161618;
 }
 body {
-	width: 70vw;
-	margin-left: auto;
-	margin-right: auto;
 	font-family: 'Lora', serif;
 	line-height: 1.3;
 	color:white;
+}
+.content {
+	width: 70vw;
+	margin-left: auto;
+	margin-right: auto;
 }
 h3{
 	font-size: 5vmin;
