--- a/assets/general-css.css
+++ b/assets/general-css.css
@@ -11,7 +11,7 @@
 .icon-bar a {
   display: block;
   text-align: center;
-  padding: 16px;
+  padding: 16px 10px 16px 10px;
   transition: all 0.3s ease;
   color: white;
   font-size: 20px;
