--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -33,8 +33,7 @@ body{
 }
 i{
 	font-style: normal;
-	margin: 3px;
-	font-size: larger;
+	margin: 0.5vmin;
 }
 .desc{
 	margin-top:0;
@@ -57,24 +56,24 @@ a{
 	text-decoration: none;
 }
 .zoom {
-  transition: transform .01s;
+	transition: transform .01s;
 	display: inline-block;
 	margin: 20px;
 }
 .zoom:hover {
-  -ms-transform: scale(1.5); /* IE 9 */
-  -webkit-transform: scale(1.5); /* Safari 3-8 */
-  transform: scale(1.5);
+	-ms-transform: scale(1.5); /* IE 9 */
+	-webkit-transform: scale(1.5); /* Safari 3-8 */
+	transform: scale(1.5);
 }
 
 @media only screen and (max-width: 800px) {
 	.content{
 		position: absolute;
-	  top: 50%;
+		top: 50%;
 		left: 50%;
-	  -moz-transform: translateX(-50%) translateY(-50%);
-	  -webkit-transform: translateX(-50%) translateY(-50%);
-	  transform: translateX(-50%) translateY(-50%);
+		-moz-transform: translateX(-50%) translateY(-50%);
+		-webkit-transform: translateX(-50%) translateY(-50%);
+		transform: translateX(-50%) translateY(-50%);
 	}
 	.name {
 		font-size: 11vmin;
